<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ECarmaAssignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ecarma_logo">ECarma Logo</string>
    <string name="text_splash_home"><![CDATA[Organize, manage & track all the maintenance and asset management of your community]]></string>
    <string name="text_get_started">GET STARTED</string>
    <string name="text_get_register">Register</string>
    <string name="text_create_community">Create Community</string>
    <string name="text_submit">Submit</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_onboard">Welcome Onboard!</string>
    <string name="text_welcome_back">Welcome Back !</string>
    <string name="text_already_signin">Already have an account ? <b><font color="#E3AC0D">Sign in</font></b></string>
    <string name="text_create_acc">Don\'t have an account ? <b><font color="#E3AC0D">Sign up</font></b></string>
    <string name="text_forgot"><b><font color="#E3AC0D">Forgot Password?</font></b></string>
    <string name="string_hint_name"><b>Name</b></string>
    <string name="string_hint_email"><b>Email ID</b></string>
    <string name="string_hint_contact"><b>Enter Your Contact Number</b></string>
    <string name="string_hint_password"><b>Enter Password</b></string>
    <string name="string_hint_confirm_password"><b>Confirm Password</b></string>
    <string name="string_hint_upload_image"><b>Upload Image</b></string>
    <string name="string_hint_email_phone"><b>Enter Email or Phone No.</b></string>
    <string name="string_add_new">Add New</string>
    <string name="string_hint_community_name">Community Name</string>
    <string name="string_hint_community_address">Community Address</string>
    <string name="string_hint_community_city">City</string>
    <string name="string_hint_community_location">Location</string>
    <string name="string_hint_community_onboarding">Date of Onboarding</string>
    <string name="string_hint_community_age">Age of Community</string>
    <string name="string_hint_community_association">Association name</string>

    <string name="string_hint_poc_name">Association POC Name</string>
    <string name="string_hint_poc_designation">Association POC Designation</string>
    <string name="string_hint_poc_contact">Association POC Contact</string>
    <string name="string_hint_poc_email">Association POC Email ID</string>
    <string name="string_hint_poc_number">Member Flat Number</string>

    <string name="string_hint_units">Total apartment units</string>
    <string name="string_hint_occupied">Total Units Occupied</string>
    <string name="string_hint_residing">Total Owners Residing</string>
    <string name="string_hint_floors">No of floors</string>
    <string name="string_hint_blocks">No of blocks</string>
    <string name="string_hint_name_block">Name of the blocks</string>

    <string name="string_manpower_desc"><b>Description : </b>Common area cleaning<br /><b>Frequency : </b>Daily<br /><b>Resource HC : </b>10<br /><b>Last activity date : </b>22nd Aug 2021<br /><b>Agency Email ID : </b>xyz@gmail.com<br /><b>Agreement renewal Date : </b>2nd Jan 2022<br /><b>Agreement Copy : </b><font color='#005dff'>View</font></string>
</resources>