<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDescriptionBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineNameBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="146dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineContactBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEmailBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePasswordBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineConfirmBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/textDescription"
        style="@style/TextTitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_onboard"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guidelineDescriptionBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="14sp"
        android:singleLine="true"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:inputType="textPersonName"
        android:hint="@string/string_hint_name"
        app:layout_constraintBottom_toTopOf="@+id/guidelineNameBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineDescriptionBottom"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edittext_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_hint_contact"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineContactBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineNameBottom" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineEmailBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineContactBottom" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePasswordBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineEmailBottom" />

    <EditText
        android:id="@+id/edittext_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_hint_confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineConfirmBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelinePasswordBottom" />

    <EditText
        android:id="@+id/edittextImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_hint_upload_image"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineImageBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineConfirmBottom"
        android:drawableEnd="@drawable/ic_camera"
        android:drawableRight="@drawable/ic_camera" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGetStarted"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:shadowColor="@color/buttonShadowColor"
        android:text="@string/text_get_register"
        app:layout_constraintBottom_toTopOf="@+id/guidelineButtonBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineButtonTop" />

    <TextView
        android:id="@+id/textSignUp"
        style="@style/TextTitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="normal"
        android:text="@string/text_already_signin"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineButtonBottom" />

</androidx.constraintlayout.widget.ConstraintLayout>