<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.mainfeed.community.AddCommunityFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_hint_community_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_hint_community_address"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/edittext_age_of_community"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_hint_community_age"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <EditText
        android:id="@+id/edittext_association_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_hint_community_association"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <EditText
        android:id="@+id/edittext_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_ciry"
        android:drawableRight="@drawable/ic_ciry"
        android:ems="10"
        android:hint="@string/string_hint_community_city"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <EditText
        android:id="@+id/edittext_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_location"
        android:drawableRight="@drawable/ic_location"
        android:ems="10"
        android:hint="@string/string_hint_community_location"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <EditText
        android:id="@+id/edittext_boarding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_date"
        android:drawableRight="@drawable/ic_date"
        android:ems="10"
        android:hint="@string/string_hint_community_onboarding"
        android:importantForAutofill="no"
        android:inputType="date"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGetStarted"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:shadowColor="@color/buttonShadowColor"
        android:text="@string/text_create_community"
        app:layout_constraintBottom_toTopOf="@+id/guidelineButtonBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineButtonTop" />

</androidx.constraintlayout.widget.ConstraintLayout>