<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTextBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <TextView
        android:id="@+id/textDescription"
        style="@style/TextTitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_welcome_back"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTextBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEmailBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePasswordBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForgotTextBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_hint_email_phone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineEmailBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineImageBottom" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePasswordBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineEmailBottom" />

    <TextView
        android:id="@+id/textForgotPassword"
        style="@style/TextTitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_forgot"
        android:textAlignment="center"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/guidelineForgotTextBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelinePasswordBottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignIn"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:shadowColor="@color/buttonShadowColor"
        android:text="@string/text_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/guidelineButtonBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineButtonTop" />

    <TextView
        android:id="@+id/textSignUp"
        style="@style/TextTitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="normal"
        android:text="@string/text_create_acc"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineButtonBottom" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo_login"
        app:layout_constraintBottom_toTopOf="@+id/guidelineImageBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTextBottom" />
</androidx.constraintlayout.widget.ConstraintLayout>