<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent"
    tools:context=".ui.splash.SplashFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLogoLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLogoRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineLogoTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLogoBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTextBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/imageviewLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ecarma_logo"
        app:layout_constraintBottom_toTopOf="@+id/guidelineLogoBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLogoRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLogoLeft"
        app:layout_constraintTop_toTopOf="@+id/guideLineLogoTop"
        android:contentDescription="@string/ecarma_logo" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_splash_home"
        android:textAlignment="center"
        style="@style/TextTitleStyle"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTextBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineButtonRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineButtonLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineLogoBottom"
        android:gravity="center_horizontal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGetStarted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        style="@style/ButtonStyle"
        android:text="@string/text_get_started"
        android:shadowColor="@color/buttonShadowColor"
        app:layout_constraintBottom_toTopOf="@+id/guidelineButtonBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineButtonRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineButtonLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineButtonTop" />


</androidx.constraintlayout.widget.ConstraintLayout>